kubernetes/authelia/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: authelia
  labels:
    app: authelia
spec:
  type: ClusterIP
  selector:
    app: authelia
  ports:
  - name: http
    port: 9091
    targetPort: 9091
    protocol: TCP
